[gd_scene load_steps=54 format=3 uid="uid://c6rs024dphgyi"]

[ext_resource type="Shader" uid="uid://dfv3r5ddvi64k" path="res://shaders/viewport-stilisation.gdshader" id="1_bmdfi"]
[ext_resource type="Script" uid="uid://dghwb7572hhu5" path="res://scripts/acceptance_script.gd" id="1_r74yb"]
[ext_resource type="Shader" uid="uid://dx4j3ktvusun8" path="res://shaders/noise-anim.gdshader" id="3_63sut"]
[ext_resource type="Texture2D" uid="uid://4bh2ipbbbf88" path="res://sprites/acceptance-level-palette-1x.png" id="3_r74yb"]
[ext_resource type="PackedScene" uid="uid://fbc2xb6crcix" path="res://scenes/scene_transition_animation.tscn" id="4_jy83o"]
[ext_resource type="PackedScene" uid="uid://bt8yplhemifca" path="res://scenes/spirit-character.tscn" id="5_5r6g4"]
[ext_resource type="Script" uid="uid://pxom27aj2sbu" path="res://player-movement.gd" id="6_n805s"]
[ext_resource type="Texture2D" uid="uid://bebwn3i4x0pi2" path="res://sprites/f-icon.png" id="7_67b56"]
[ext_resource type="Texture2D" uid="uid://dyseviy52i6ua" path="res://sprites/talking.png" id="9_kt7pr"]
[ext_resource type="PackedScene" uid="uid://4xnu70r485m6" path="res://assets/light.tscn" id="10_bmdfi"]
[ext_resource type="Script" uid="uid://cg3d0qbbovt8n" path="res://scripts/Textbox.gd" id="10_dtady"]
[ext_resource type="Theme" uid="uid://c4h4g480ssbxo" path="res://themes/panel-theme.tres" id="11_bmdfi"]
[ext_resource type="FontFile" uid="uid://g1yjaor6bxfu" path="res://fonts/zig_____.ttf" id="12_er2oi"]
[ext_resource type="AudioStream" uid="uid://c53byuaf85iue" path="res://sound/speaking.mp3" id="14_63sut"]
[ext_resource type="AudioStream" uid="uid://q2j4bbckaa4p" path="res://sound/acceptance_ambient.mp3" id="14_er2oi"]
[ext_resource type="AudioStream" uid="uid://ctgjnffrrxtn7" path="res://sound/level_done.wav" id="16_jy83o"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8vgq1"]
shader = ExtResource("1_bmdfi")
shader_parameter/num_colors = 10
shader_parameter/PALETTE_TEXTURE = ExtResource("3_r74yb")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_ug2g8"]
noise_type = 3
seed = 42
frequency = 0.0037
fractal_octaves = 8
fractal_weighted_strength = 0.23
cellular_distance_function = 3

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_bmdfi"]
width = 1028
seamless = true
seamless_blend_skirt = 0.516
noise = SubResource("FastNoiseLite_ug2g8")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_alrbk"]
render_priority = 0
shader = ExtResource("3_63sut")
shader_parameter/noise_tex = SubResource("NoiseTexture2D_bmdfi")
shader_parameter/scale = 0.66
shader_parameter/speed = 0.15
shader_parameter/octaves = 8
shader_parameter/distortion_strength = 0.51

[sub_resource type="BoxMesh" id="BoxMesh_8x2da"]
size = Vector3(2, 0.02, 2.02)

[sub_resource type="BoxShape3D" id="BoxShape3D_ma50o"]
size = Vector3(1.985, 0.201, 2.131)

[sub_resource type="BoxShape3D" id="BoxShape3D_63sut"]
size = Vector3(0.855042, 0.630005, 1.35641)

[sub_resource type="BoxShape3D" id="BoxShape3D_6p5ol"]
size = Vector3(0.387207, 0.359436, 0.395996)

[sub_resource type="BoxMesh" id="BoxMesh_ot47a"]
size = Vector3(0.37, 0.37, 0.37)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_u2c7u"]
specular_mode = 1
albedo_color = Color(0.75, 0.75, 0.75, 1)
metallic_specular = 1.0

[sub_resource type="BoxShape3D" id="BoxShape3D_4b0ap"]
size = Vector3(0.090332, 1, 17.2031)

[sub_resource type="AtlasTexture" id="AtlasTexture_rv8o5"]
atlas = ExtResource("9_kt7pr")
region = Rect2(0, 0, 32, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_3cvy1"]
atlas = ExtResource("9_kt7pr")
region = Rect2(32, 0, 32, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_y5p7l"]
atlas = ExtResource("9_kt7pr")
region = Rect2(64, 0, 32, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_6kp70"]
atlas = ExtResource("9_kt7pr")
region = Rect2(96, 0, 32, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_sbhua"]
atlas = ExtResource("9_kt7pr")
region = Rect2(128, 0, 32, 18)

[sub_resource type="SpriteFrames" id="SpriteFrames_ndxsr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rv8o5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3cvy1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y5p7l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6kp70")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sbhua")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="BoxShape3D" id="BoxShape3D_oklbl"]
size = Vector3(50, 0.01, 20)

[sub_resource type="Gradient" id="Gradient_r74yb"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_c7k8o"]
seed = 119
frequency = 0.0029
fractal_lacunarity = 3.42
domain_warp_enabled = true
domain_warp_amplitude = 89.4
domain_warp_frequency = 0.01
domain_warp_fractal_octaves = 3
domain_warp_fractal_lacunarity = 9.52

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_er2oi"]
width = 1280
height = 1280
generate_mipmaps = false
seamless = true
seamless_blend_skirt = 0.34
color_ramp = SubResource("Gradient_r74yb")
noise = SubResource("FastNoiseLite_c7k8o")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_r74yb"]
diffuse_mode = 3
specular_mode = 1
disable_ambient_light = true
albedo_texture = SubResource("NoiseTexture2D_er2oi")
metallic_specular = 0.0

[sub_resource type="PlaneMesh" id="PlaneMesh_77hi2"]
size = Vector2(10, 20)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_c7k8o"]
diffuse_mode = 3
specular_mode = 1
disable_ambient_light = true
albedo_texture = SubResource("NoiseTexture2D_er2oi")
metallic_specular = 0.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_c41d8"]
diffuse_mode = 3
specular_mode = 1
disable_ambient_light = true
albedo_texture = SubResource("NoiseTexture2D_er2oi")
metallic_specular = 0.0

[sub_resource type="BoxShape3D" id="BoxShape3D_8qpe2"]
size = Vector3(41.3777, 1, 0.318848)

[sub_resource type="BoxShape3D" id="BoxShape3D_lhg4t"]
size = Vector3(43.4979, 1, 0.526367)

[sub_resource type="BoxShape3D" id="BoxShape3D_mgbwy"]
size = Vector3(25.724, 1, 0.376)

[sub_resource type="BoxShape3D" id="BoxShape3D_6cq8k"]
size = Vector3(0.403198, 1, 22.05)

[sub_resource type="BoxShape3D" id="BoxShape3D_er2oi"]
size = Vector3(0.332001, 1, 22.05)

[sub_resource type="BoxShape3D" id="BoxShape3D_1jbc7"]
size = Vector3(0.090332, 1, 17.2031)

[sub_resource type="CylinderMesh" id="CylinderMesh_dtady"]
height = 0.471

[sub_resource type="BoxMesh" id="BoxMesh_dtady"]
size = Vector3(0.37, 0.37, 0.37)

[sub_resource type="BoxShape3D" id="BoxShape3D_bmdfi"]
size = Vector3(1.01917, 0.502014, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_63sut"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jy83o"]
border_color = Color(1, 1, 1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_5r6g4"]
font = ExtResource("12_er2oi")
font_size = 28

[node name="Acceptance" type="Node3D"]
script = ExtResource("1_r74yb")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
material = SubResource("ShaderMaterial_8vgq1")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
handle_input_locally = false
canvas_item_default_texture_filter = 0
audio_listener_enable_3d = true
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="GateToRealm" type="MeshInstance3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(-3.98221e-08, -0.911022, 0.412357, 1, -4.37114e-08, 5.20722e-15, 1.80247e-08, 0.412357, 0.911022, 22.0345, 0.990408, 1.0962)
material_override = SubResource("ShaderMaterial_alrbk")
mesh = SubResource("BoxMesh_8x2da")
skeleton = NodePath("../../..")

[node name="GateArea" type="Area3D" parent="SubViewportContainer/SubViewport/GateToRealm"]
transform = Transform3D(1, 3.10862e-15, -1.77636e-15, 8.88178e-16, 1, 0, -1.77636e-15, 0, 1, 0, -0.00782585, -0.0240593)

[node name="GateCollision" type="CollisionShape3D" parent="SubViewportContainer/SubViewport/GateToRealm/GateArea"]
transform = Transform3D(1, 2.6037e-12, -1.30207e-12, -4.44089e-16, 1, 0, -3.55271e-15, 0, 1, 0.027832, 0.00775909, 0.015893)
shape = SubResource("BoxShape3D_ma50o")
debug_color = Color(0.7, 0, 0, 1)

[node name="acceptance-camera" type="Camera3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 0.951057, 0.309017, 0, -0.309017, 0.951057, 0, 4, 12)
projection = 1
fov = 50.0
size = 5.5
far = 60.0

[node name="scene_transition_animation" parent="SubViewportContainer/SubViewport" instance=ExtResource("4_jy83o")]

[node name="dialogue_activator_1" type="Area3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12.2282, 0, 2.48629)

[node name="CollisionShape3D" type="CollisionShape3D" parent="SubViewportContainer/SubViewport/dialogue_activator_1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.552704, 0.369337, -0.283646)
shape = SubResource("BoxShape3D_63sut")
debug_color = Color(0, 1, 0.183333, 1)

[node name="Spirit-Character" parent="SubViewportContainer/SubViewport" instance=ExtResource("5_5r6g4")]
transform = Transform3D(0.75, 0, 0, 0, 0.75, 0, 0, 0, 0.75, 13.7037, -4.76837e-07, 2.17175)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(-0.884928, 0.138933, -0.444521, -0.409285, 0.223454, 0.884621, 0.222232, 0.964763, -0.140878, 0, 1.20129, 0)
light_energy = 0.083
shadow_bias = 0.02

[node name="CharacterBody3D" type="CharacterBody3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0570268, 0)
script = ExtResource("6_n805s")

[node name="CollisionShape3D" type="CollisionShape3D" parent="SubViewportContainer/SubViewport/CharacterBody3D"]
transform = Transform3D(0.452481, 0, 0.891774, 0, 1, 0, -0.891774, 0, 0.452481, -0.0563965, 0.126718, 0.052002)
shape = SubResource("BoxShape3D_6p5ol")

[node name="MeshInstance3D" type="MeshInstance3D" parent="SubViewportContainer/SubViewport/CharacterBody3D/CollisionShape3D"]
transform = Transform3D(0.999996, 0, -0.00300196, 0, 1, 0, 0.00300196, 0, 0.999996, 0, -0.0138851, 0)
mesh = SubResource("BoxMesh_ot47a")
surface_material_override/0 = SubResource("StandardMaterial3D_u2c7u")

[node name="pressFIndicator" type="Sprite3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(1.25, 0, 0, 0, 1.25, 0, 0, 0, 1.25, -7.86208, 0.744362, 0)
billboard = 1
texture_filter = 0
texture = ExtResource("7_67b56")

[node name="area-2" type="Area3D" parent="SubViewportContainer/SubViewport/pressFIndicator"]
transform = Transform3D(0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 10.6074, -0.15549, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="SubViewportContainer/SubViewport/pressFIndicator/area-2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00436223, 0, 0.421875)
shape = SubResource("BoxShape3D_4b0ap")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="SubViewportContainer/SubViewport/pressFIndicator/area-2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.25005, 0, 0.422)
shape = SubResource("BoxShape3D_4b0ap")

[node name="talking_indicator" type="AnimatedSprite3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, -7.5353, 1.28151, 0)
billboard = 1
texture_filter = 0
sprite_frames = SubResource("SpriteFrames_ndxsr")
autoplay = "default"
frame_progress = 0.586736

[node name="Floor" type="StaticBody3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0977321, 0, 0)

[node name="floor-collider" type="CollisionShape3D" parent="SubViewportContainer/SubViewport/Floor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15, 0, 0)
shape = SubResource("BoxShape3D_oklbl")
debug_color = Color(0, 0.85, 1, 0.168627)

[node name="floor-left" type="MeshInstance3D" parent="SubViewportContainer/SubViewport/Floor/floor-collider"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -15, 0, 0)
material_override = SubResource("StandardMaterial3D_r74yb")
mesh = SubResource("PlaneMesh_77hi2")
skeleton = NodePath("../..")

[node name="floor-right" type="MeshInstance3D" parent="SubViewportContainer/SubViewport/Floor/floor-collider"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0, 0)
material_override = SubResource("StandardMaterial3D_c7k8o")
mesh = SubResource("PlaneMesh_77hi2")
skeleton = NodePath("../..")

[node name="floor-right2" type="MeshInstance3D" parent="SubViewportContainer/SubViewport/Floor/floor-collider"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, 0)
material_override = SubResource("StandardMaterial3D_c41d8")
mesh = SubResource("PlaneMesh_77hi2")

[node name="restriction-bottom" type="CollisionShape3D" parent="SubViewportContainer/SubViewport/Floor"]
transform = Transform3D(-1, 0, -8.74229e-08, 0, 1, 0, 8.74229e-08, 0, -1, 14.8523, 0, 9.51673)
shape = SubResource("BoxShape3D_8qpe2")
debug_color = Color(0, 0.85, 1, 1)
debug_fill = false

[node name="restriction-top" type="CollisionShape3D" parent="SubViewportContainer/SubViewport/Floor"]
transform = Transform3D(-1, 0, -8.74229e-08, 0, 1, 0, 8.74229e-08, 0, -1, 15.5858, 0, -8.74549)
shape = SubResource("BoxShape3D_lhg4t")
debug_color = Color(0, 0.85, 1, 1)
debug_fill = false

[node name="restriction-left" type="CollisionShape3D" parent="SubViewportContainer/SubViewport/Floor"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -5.15933, 0, 0.137418)
shape = SubResource("BoxShape3D_mgbwy")
debug_color = Color(0, 0.85, 1, 1)
debug_fill = false

[node name="CollisionShape3D2" type="CollisionShape3D" parent="SubViewportContainer/SubViewport/Floor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 25.1824, 0.541047, 0)
shape = SubResource("BoxShape3D_6cq8k")
debug_color = Color(0, 0.595, 0.7, 1)

[node name="gateBlocker" type="CollisionShape3D" parent="SubViewportContainer/SubViewport/Floor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15.272, 0.541047, 0)
shape = SubResource("BoxShape3D_er2oi")
debug_color = Color(0.98353, 0, 0.279465, 1)

[node name="area-1" type="Area3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.66038, 0.5498, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="SubViewportContainer/SubViewport/area-1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00436223, 0, 0.421875)
shape = SubResource("BoxShape3D_1jbc7")

[node name="area-2" type="Area3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.39723, 0.55, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="SubViewportContainer/SubViewport/area-2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00436223, 0, 0.421875)
shape = SubResource("BoxShape3D_1jbc7")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="SubViewportContainer/SubViewport/area-2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.25005, 0, 0.422)
shape = SubResource("BoxShape3D_1jbc7")

[node name="area-3" type="Area3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15.4055, 0.55, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="SubViewportContainer/SubViewport/area-3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00436223, 0, 0.421875)
shape = SubResource("BoxShape3D_1jbc7")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="SubViewportContainer/SubViewport/area-3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.21124, 0, 0.422)
shape = SubResource("BoxShape3D_1jbc7")

[node name="SpotLight3D" type="SpotLight3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(0.906678, -0.0955182, 0.410868, -0.416932, -0.0550108, 0.907271, -0.0640589, -0.993906, -0.0897012, 1.13485, 1.26594, -0.105864)
light_energy = 0.87
shadow_enabled = true
shadow_blur = 0.48
spot_range = 13.0
spot_angle = 69.6

[node name="light" parent="SubViewportContainer/SubViewport" groups=["lights"] instance=ExtResource("10_bmdfi")]
transform = Transform3D(0.894934, 0, 0.446198, 0, 1, 0, -0.446198, 0, 0.894934, 7.3797, 0, -5.22307)

[node name="light2" parent="SubViewportContainer/SubViewport" groups=["lights"] instance=ExtResource("10_bmdfi")]
transform = Transform3D(-0.803857, 0, 0.594823, 0, 1, 0, -0.594823, 0, -0.803857, 12.6328, 0, -3.69344)

[node name="light3" parent="SubViewportContainer/SubViewport" groups=["lights"] instance=ExtResource("10_bmdfi")]
transform = Transform3D(-0.932953, 0, -0.359997, 0, 1, 0, 0.359997, 0, -0.932953, 12.0806, 0, 5.54631)

[node name="Podest" type="Node3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0.2, 0)

[node name="Podest-Mesh" type="MeshInstance3D" parent="SubViewportContainer/SubViewport/Podest"]
material_override = SubResource("StandardMaterial3D_r74yb")
mesh = SubResource("CylinderMesh_dtady")
skeleton = NodePath("../..")

[node name="Cube" type="MeshInstance3D" parent="SubViewportContainer/SubViewport/Podest"]
transform = Transform3D(0.452435, 0, 0.891798, 0, 1, 0, -0.891798, 0, 0.452435, 0, 0.420003, 0)
mesh = SubResource("BoxMesh_dtady")

[node name="StaticBody3D" type="StaticBody3D" parent="SubViewportContainer/SubViewport/Podest"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="SubViewportContainer/SubViewport/Podest/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00189209, 0.115175, 0)
shape = SubResource("BoxShape3D_bmdfi")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("10_dtady")

[node name="DialogueBox" type="MarginContainer" parent="CanvasLayer"]
texture_filter = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 25.0
offset_top = -163.0
offset_right = -27.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("11_bmdfi")

[node name="Panel" type="Panel" parent="CanvasLayer/DialogueBox"]
texture_filter = 1
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_63sut")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/DialogueBox"]
texture_filter = 1
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="Panel" type="Panel" parent="CanvasLayer/DialogueBox/MarginContainer"]
visible = false
texture_filter = 1
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_jy83o")

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/DialogueBox/MarginContainer"]
texture_filter = 1
layout_mode = 2

[node name="Start" type="Label" parent="CanvasLayer/DialogueBox/MarginContainer/HBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(22, 0)
layout_mode = 2
size_flags_vertical = 0
text = "*"
label_settings = SubResource("LabelSettings_5r6g4")

[node name="Label" type="Label" parent="CanvasLayer/DialogueBox/MarginContainer/HBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Placeholder Text ahahahahah Placeholder Text ahahahahah Placeholder Text ahahahahah Placeholder Text ahahahahah ahahahahah"
label_settings = SubResource("LabelSettings_5r6g4")
autowrap_mode = 2
clip_text = true
visible_characters = 0
visible_ratio = 0.0

[node name="End" type="Label" parent="CanvasLayer/DialogueBox/MarginContainer/HBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(22, 0)
layout_mode = 2
size_flags_vertical = 8
text = "v"
label_settings = SubResource("LabelSettings_5r6g4")

[node name="LetterSound" type="AudioStreamPlayer" parent="CanvasLayer"]
stream = ExtResource("14_63sut")
volume_db = -20.0
bus = &"Speaking"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_er2oi")
volume_db = -15.377
autoplay = true

[node name="successSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16_jy83o")

[connection signal="body_entered" from="SubViewportContainer/SubViewport/GateToRealm/GateArea" to="." method="_on_gate_area_body_entered"]
[connection signal="body_exited" from="SubViewportContainer/SubViewport/GateToRealm/GateArea" to="." method="_on_gate_area_body_exited"]
[connection signal="body_entered" from="SubViewportContainer/SubViewport/dialogue_activator_1" to="." method="_on_dialogue_activator_1_body_entered"]
[connection signal="body_entered" from="SubViewportContainer/SubViewport/area-1" to="." method="_on_area_1_body_entered"]
[connection signal="body_entered" from="SubViewportContainer/SubViewport/area-2" to="." method="_on_area_2_body_entered"]
[connection signal="body_entered" from="SubViewportContainer/SubViewport/area-3" to="." method="_on_area_3_body_entered"]
[connection signal="stop_movement" from="CanvasLayer" to="SubViewportContainer/SubViewport/CharacterBody3D" method="_on_canvas_layer_stop_movement"]
